[package]
name = "xtask"
description = "internal-only crate used to orchestrate repo tasks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
duct = "0.13.*"
inquire = "0.6.*"
regex = "1.*"
semver = "1.*"
toml_edit = "0.20.*"
