[package]
name = "detect-newline-style"
description = "Determine a string's preferred newline character"
version = "0.1.1"
keywords = [
	"eol",
	"newline",
	"line-ending",
	"text"
]
categories = [
	"encoding",
	"filesystem",
	"text-processing"
]
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
regex = "1.*"
