[package]
name = "node-js-info"
description = "Asynchronously retrieve Node.js release info by version and platform"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.*" }
semver = "1.*"
tokio = { version = "1.*", features = ["full"] }

[dev-dependencies]
mockito = "1.*"
