[package]
name = "node-js-release-info"
description = "Asynchronously retrieve Node.js release info by version and platform from the [downloads server](https://nodejs.org/download/release/)"
version = "0.1.1"
keywords = [
	"nodejs",
	"download",
	"installer",
	"async",
	"http"
]
categories = [
	"development-tools::build-utils",
	"development-tools::testing",
	"web-programming::http-client"
]
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.*" }
semver = "1.*"
tokio = { version = "1.*", default-features = false, features = ["macros", "net", "time"] }

[dev-dependencies]
mockito = "1.*"
